Prevent team names from wrapping
Would mess up table format slightly. Not too concerned about hiding info
now that we have the team details modal, yay!

--- a/assets/results_template/style.scss
+++ b/assets/results_template/style.scss
@@ -179,6 +179,12 @@ table.results-classic {
     cursor: pointer;
   }
 
+  td.team {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
   td.event-points[data-points='1'] div,
   td.event-points-focus[data-points='1'] div,
   td.rank[data-points='1'] div {
